--- a/submission.ipynb
+++ b/submission.ipynb
@@ -29,6 +29,36 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Importing dependencies needed"
+      ],
+      "metadata": {
+        "id": "dVdOXx3dx-3H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install transformers"
+      ],
+      "metadata": {
+        "id": "E7U-uUkjx8N7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### RST Ranker Logic\n",
+        "This Section of the code aims to rank EDUs based on their importance with the text. Text must first be processed using HILDA and stored."
+      ],
+      "metadata": {
+        "id": "rfxmWGh7xn9N"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -36,8 +66,72 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "import csv\n",
+        "import re \n",
+        "import json\n",
+        "def convert_str_RST_to_tup(rst_str = None):\n",
+        "    rst_str = rst_str.replace('ParseTree', '')\n",
+        "    print (rst_str)\n",
+        "    rst_str = eval(rst_str)\n",
+        "    return rst_str\n",
+        "\n",
+        "w = []\n",
+        "# The two weighting schemes defined. HEAVY removes all SATELITES\n",
+        "# (think text summerization), LIGHT only intensifies and subdues NUC's and SAT's.\n",
+        "\n",
+        "HEAVY = (1, 0)\n",
+        "LIGHT = (1.4, 0.6)\n",
+        "STAGE_2 = (1, 1)\n",
+        "\n",
+        "# Recursively weight the the tuple-tree (nested tuples). \n",
+        "def weight_RST(weights, tup_obj, weight=1, weighting_scheme=LIGHT):\n",
+        "    # print (\"Begin Weighting Process....\")\n",
+        "    NUC = '[N]'\n",
+        "    SAT = '[S]'\n",
+        "    NA  = 'n/a'\n",
+        "    relation = tup_obj[0]\n",
+        "    subtree = tup_obj[1]\n",
+        "    relation_type = re.findall(r'\\[[a-zA-Z]\\]', relation)\n",
+        "\n",
+        "    if relation == NA:\n",
+        "        weights.append([subtree[0], weighting_scheme[0]])\n",
+        "        return\n",
+        "\n",
+        "    if isinstance(subtree[0], str):\n",
+        "        if relation_type[0] == NUC:\n",
+        "            weights.append ([subtree[0], weight*weighting_scheme[0]])\n",
+        "        if relation_type[0] == SAT:\n",
+        "            weights.append ([subtree[0], weight*weighting_scheme[1]])\n",
+        "    if isinstance(subtree[1], str):\n",
+        "        if relation_type[1] == NUC:\n",
+        "            weights.append ([subtree[1], weight*weighting_scheme[0]])\n",
+        "        if relation_type[1] == SAT:\n",
+        "            weights.append ([subtree[1], weight*weighting_scheme[1]])\n",
+        "    if isinstance(subtree[1], tuple):\n",
+        "        if relation_type[1] == NUC:\n",
+        "            weight_RST(weights, subtree[1], weight*weighting_scheme[0])\n",
+        "        if relation_type[1] == SAT:\n",
+        "            weight_RST(weights, subtree[1], weight*weighting_scheme[1])\n",
+        "    if isinstance(subtree[0], tuple):\n",
+        "        if relation_type[0] == NUC:\n",
+        "            weight_RST(weights, subtree[0], weight*weighting_scheme[0])\n",
+        "        if relation_type[0] == SAT:\n",
+        "            weight_RST(weights, subtree[0], weight*weighting_scheme[1])\n",
+        "    # print (\"FINISHED Weighting Process....\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Representation of outputs\n",
+        "\n",
+        "> Below is a graph that describes which parts of the text are the most important for each instance.\n",
+        "> \n",
+        "> We threshold this information and use it to train our subsequent model for detection of emerging policy changing data."
+      ],
+      "metadata": {
+        "id": "_aPAtHF4yIJX"
+      }
     }
   ],
   "metadata": {
