--- a/submission.ipynb
+++ b/submission.ipynb
@@ -5,6 +5,9 @@
       "source": [
         "# Omar Ali's Submission\n",
         "\n",
+        "## Introduction\n",
+        "> I have chosen to go with the route of pre-parsing text for analysis using Rhetorical Structure Theory (RST). RST is a theory within text analysis I worked very closely with, that allows you to abstract text in a hierarchical fashion. This is done using a three stage process (Segmenting, Relationship generation and Tree generation). For the consideration of time, a well known RST parser (HILDA) will be used to carry our these stages. As the parser's implementation is fairly old, It has been contained by a wrapper using Docker. Therefore, I will preparse the text I will use in this work and output the findings into a folder for use in this Notebook. Streamlining this process will be explored at the end of this submission with further-work and improvements also explained.\n",
+        "\n",
         "## Plan for Cube\n",
         "\n",
         "> For the consideration of time, I have pre-generated RST trees from a selection of instances within the provided dataset. In practice this would be scaled up to an automated generation cycle per instance whereby, for each instance added to the database, and RST tree would be generated.\n",
@@ -79,9 +82,9 @@
         "# The two weighting schemes defined. HEAVY removes all SATELITES\n",
         "# (think text summerization), LIGHT only intensifies and subdues NUC's and SAT's.\n",
         "\n",
-        "HEAVY = (1, 0)\n",
-        "LIGHT = (1.4, 0.6)\n",
-        "STAGE_2 = (1, 1)\n",
+        "HEAVY = (1, 0).     # This weighting scheme will simply remove any significants of satelliting spans.\n",
+        "LIGHT = (1.5, 0.5)  # This weighting scheme will add 50% to the nuclei, and subtract 50% from thr satellites.\n",
+        "STAGE_2 = (1, 1)    # THis weighting scheme will preserve the natural weights formed from the tree.\n",
         "\n",
         "# Recursively weight the the tuple-tree (nested tuples). \n",
         "def weight_RST(weights, tup_obj, weight=1, weighting_scheme=LIGHT):\n",
@@ -123,6 +126,30 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Importing RST Parsed Data\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "N88g6gRP7bIX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Weight and Train Model\n",
+        "> This section takes our RST outputs generated from HILDA (RST Parser) and weights the most important parts by means of a weighting scheme.\n",
+        ">\n",
+        "> The weighting scheme determines how the nucleus (Most important span) and its satellite (The sumplimentary span) is weighted.\n",
+        ">\n",
+        "> Traditionally, the weighting scheme used is (1.5, 0.5) whereby, more important spans are weighted 50% more, and the less importanted spans' importance is halved."
+      ],
+      "metadata": {
+        "id": "zb2SvmzI7rOF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Representation of outputs\n",
         "\n",
         "> Below is a graph that describes which parts of the text are the most important for each instance.\n",
@@ -131,6 +158,24 @@
       ],
       "metadata": {
         "id": "_aPAtHF4yIJX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Summary and Conclusions"
+      ],
+      "metadata": {
+        "id": "XTXnO8ta9Q-V"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Further work and Improvements"
+      ],
+      "metadata": {
+        "id": "xeNXiAO89UA8"
       }
     }
   ],
