--- a/submission.ipynb
+++ b/submission.ipynb
@@ -3,12 +3,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Omar Ali's Submission\n",
+        "# Omar Ali's Cube Submission\n",
         "\n",
-        "## Introduction\n",
+        "## Introduction ⚓\n",
         "> I have chosen to go with the route of pre-parsing text for analysis using Rhetorical Structure Theory (RST). RST is a theory within text analysis I worked very closely with, that allows you to abstract text in a hierarchical fashion. This is done using a three stage process (Segmenting, Relationship generation and Tree generation). For the consideration of time, a well known RST parser (HILDA) will be used to carry our these stages. As the parser's implementation is fairly old, It has been contained by a wrapper using Docker. Therefore, I will preparse the text I will use in this work and output the findings into a folder for use in this Notebook. Streamlining this process will be explored at the end of this submission with further-work and improvements also explained.\n",
         "\n",
-        "## Plan for Cube\n",
+        "## Goal ⭐\n",
+        "> Overall, the main goal of my submission is to understand the language and structure that goes into Policy-definining documents. I will do so by creating a subset of the data for use in RST parsing. This will allow me to weight them and take the most important for use in training a transformer for binary classification. *Less important information taken from the dataset (Not related to policy enforcing) will be used as the second class.*\n",
+        "\n",
+        "## Overview of Implementation 🕵\n",
         "\n",
         "> For the consideration of time, I have pre-generated RST trees from a selection of instances within the provided dataset. In practice this would be scaled up to an automated generation cycle per instance whereby, for each instance added to the database, and RST tree would be generated.\n",
         "> \n",
@@ -50,6 +53,16 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Extracting Text From the Embedded HTML\n",
+        "This code snippet is used to extract text from the provided Excel file. For the sake of time again, I have taken a selection of \"Completed\""
+      ],
+      "metadata": {
+        "id": "geo8LNOqAcpT"
+      }
     },
     {
       "cell_type": "markdown",
