--- a/submission.ipynb
+++ b/submission.ipynb
@@ -58,11 +58,37 @@
       "cell_type": "markdown",
       "source": [
         "### Extracting Text From the Embedded HTML\n",
-        "This code snippet is used to extract text from the provided Excel file. For the sake of time again, I have taken a selection of \"Completed\""
+        "This code snippet is used to extract text taken from the smaller dataset created. For clarity, this dataset included Policy related items. The outputs from the data are parsed using the RST parser. This is done outside of the notebook as I dodn't have enough time to create an implementation of the parser such that it was entirely self contained."
       ],
       "metadata": {
         "id": "geo8LNOqAcpT"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import auth\n",
+        "auth.authenticate_user()\n",
+        "import csv\n",
+        "import gspread\n",
+        "import pandas as pd\n",
+        "# Authorisation for google to access the data.\n",
+        "from google.auth import default\n",
+        "creds, _ = default()\n",
+        "gc = gspread.authorize(creds)\n",
+        "\n",
+        "worksheet = gc.open('cube_smaller_dataset_policy_learning').sheet1\n",
+        "rows = worksheet.get_all_values()\n",
+        "cube_policy_data_raw = pd.DataFrame.from_records(rows, columns=['issurance_type', 'text'])\n",
+        "\n",
+        "\n",
+        "# Reading the data "
+      ],
+      "metadata": {
+        "id": "GCbopZN-GbMT"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -185,7 +211,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Further work and Improvements"
+        "### Further work and Improvements\n",
+        "\n",
+        "**Challenges**\n",
+        "1. *The first main challenge was understanding the data in such a way that I could quickly figure out which parts would be most useful in the PoC.* \n",
+        "\n",
+        "    Given more time, I would like to extract other parts of the data provided and explore other uses for it (beyond RegBrain and RegInsight). I find that extra-curricular activies such as these help me to better wrap my head around the possibilities.\n",
+        "\n",
+        "2. *Streamlining and automating RST parsing.* Ideally, when new instances are inserted into this dataset, their RST counterpart would be automatically generated and embedded."
       ],
       "metadata": {
         "id": "xeNXiAO89UA8"
